tests/fail/input_not_str.rs
fn main() {
    sscanf::scanf!(5 + 4, "{}", usize);
}
